--- a/index.html
+++ b/index.html
@@ -11,3 +11,19 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style scoped>
+html{
+  width: 100%;
+  height: 100%;
+}
+body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+#app{
+  width: 100%;
+  height: 100%;
+}
+</style>
