--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script src="https://cdn.jsdelivr.net/npm/big-integer@1.6.51/big-integer.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/big-integer@1.6.51/big-integer.min.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
