--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="application/javascript">
       var global = window;
     </script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/big-integer@1.6.51/big-integer.min.js"></script> -->
   </head>
   <body>
