--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <script type="application/javascript">
-      var global = window;
+      var global = window
     </script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -19,18 +19,18 @@
 </html>
 
 <style scoped>
-html{
-  width: 100%;
-  height: 100%;
-  overflow: scroll ;
-}
-body{
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-#app{
-  width: 100%;
-  height: 100%;
-}
+  html {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+  }
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  #app {
+    width: 100%;
+    height: 100%;
+  }
 </style>
